--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "express": "^4.18.2",
     "nodemailer": "^6.9.1"
   },
-  "name": "server",
+  "name": "api",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
